tests/ui/async-await/incorrect-move-async-order-issue-79694.stderr
error: the order of `move` and `async` is incorrect
  --> $DIR/incorrect-move-async-order-issue-79694.rs:7:13
   |
LL |     let _ = move async { };
   |             ^^^^^^^^^^
   |
help: try switching the order
   |
LL -     let _ = move async { };
LL +     let _ = async move { };
   |

error: aborting due to 1 previous error

